--- a/game/index.html
+++ b/game/index.html
@@ -15,6 +15,9 @@
 	<script src="src/gameObject/Particle.js"></script>
     <script src="src/gameObject/Star.js"></script>
 
+    <script src="src/gameObject/Avatar.js"></script>
+    <script src="src/gameObject/Tube.js"></script>
+
     <script src="src/controller/GameController.js"></script>
 	<script src="src/controller/UIController.js"></script>
 
