--- a/game/index.html
+++ b/game/index.html
@@ -17,6 +17,7 @@
 
     <script src="src/gameObject/Avatar.js"></script>
     <script src="src/gameObject/Tube.js"></script>
+    <script src="src/gameObject/PathObject.js"></script>
 
     <script src="src/controller/GameController.js"></script>
 	<script src="src/controller/UIController.js"></script>
