--- a/game/index.html
+++ b/game/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<title>Tessitron - team RADMARS Ludum Dare 26</title>
+	<title>Velocitron - team RADMARS Ludum Dare 28</title>
 	
 	<link href="css/style.css" rel="stylesheet" type ="text/css">
 	
