--- a/game/index.html
+++ b/game/index.html
@@ -9,6 +9,13 @@
 	<script src="lib/Three.js"></script>
 	<script src="lib/tween.min.js"></script>
 	<script src="lib/howler.js"></script>
+	<script src="lib/CopyShader.js"></script>
+	<script src="lib/BokehShader.js"></script>
+	<script src="lib/EffectComposer.js"></script>
+	<script src="lib/RenderPass.js"></script>
+	<script src="lib/ShaderPass.js"></script>
+	<script src="lib/MaskPass.js"></script>
+	<script src="lib/BokehPass.js"></script>
 
 	<script src="src/Input.js"></script>
 	<script src="src/gameObject/GameObject.js"></script>
