Add commented out bloom, tweak death sound

--- a/game/index.html
+++ b/game/index.html
@@ -10,6 +10,8 @@
 	<script src="lib/tween.min.js"></script>
 	<script src="lib/howler.js"></script>
 	<script src="lib/CopyShader.js"></script>
+    <script src="lib/ConvolutionShader.js"></script>
+    <script src="lib/BloomPass.js"></script>
 	<script src="lib/BokehShader.js"></script>
 	<script src="lib/EffectComposer.js"></script>
 	<script src="lib/RenderPass.js"></script>
