end room PHYSICS

--- a/game/index.html
+++ b/game/index.html
@@ -28,6 +28,7 @@
     <script src="src/gameObject/Tube.js"></script>
     <script src="src/gameObject/PathObject.js"></script>
     <script src="src/gameObject/EndRoom.js"></script>
+    <script src="src/gameObject/EndRoomObject.js"></script>
 
     <script src="src/controller/GameController.js"></script>
 	<script src="src/controller/UIController.js"></script>
